--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@lavacord/discord.js": "0.0.7",
     "axios": "^0.21.1",
     "discord.js": "^13.0.1",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "mongoose": "^5.13.6",
     "node-schedule": "^2.0.0",
     "puppeteer": "^10.2.0"
