--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.6",
     "node-schedule": "^2.0.0",
-    "puppeteer": "^10.2.0"
+    "puppeteer": "^10.2.0",
+    "socket.io-client": "^4.2.0"
   }
 }
