--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.13.9",
     "node-schedule": "^2.0.0",
     "puppeteer": "^10.2.0",
+    "random-words": "^1.1.2",
     "socket.io-client": "^4.2.0"
   }
 }
