--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.13.9",
+    "nanoid": "^3.3.1",
     "node-schedule": "^2.0.0",
     "puppeteer": "^10.2.0",
     "random-words": "^1.1.2",
