--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "image-charts": "^6.0.18",
     "mongoose": "^5.13.9",
     "nanoid": "^3.3.1",
     "node-schedule": "^2.0.0",
