--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "@lavacord/discord.js": "0.0.7",
     "axios": "^0.21.3",
-    "discord.js": "^13.0.1",
+    "discord.js": "^13.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "image-charts": "^6.0.18",
@@ -22,6 +22,7 @@
     "node-schedule": "^2.0.0",
     "puppeteer": "^10.2.0",
     "random-words": "^1.1.2",
-    "socket.io-client": "^4.2.0"
+    "socket.io-client": "^4.2.0",
+    "yt-search": "^2.10.3"
   }
 }
