--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nanoid": "^3.3.1",
     "node-schedule": "^2.1.0",
     "puppeteer": "^10.2.0",
+    "request": "^2.88.2",
     "socket.io-client": "^4.2.0",
+    "text-table": "^0.2.0",
     "yt-search": "^2.10.3"
   }
 }
