--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "puppeteer": "^10.2.0",
     "request": "^2.88.2",
     "socket.io-client": "^4.2.0",
+    "table": "^6.8.0",
     "text-table": "^0.2.0",
     "yt-search": "^2.10.3"
   }
